src/test/deca/context/invalid/operations/bool/invalid_bool_op_neq_int.deca
// Description:
//    test invalid NEQ between boolean and int
//
// [Begin Result]
//invalid_bool_op_neq_int.deca:12:22: Unsupported operation '!=' between types boolean and int. (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    boolean a = false != 345;
}